# JSON-Tools-rs

./: .gitignore  .pre-commit-config.yaml  BENCHMARKS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  SECURITY.md  book.toml  clippy.toml  deny.toml  pyproject.toml  requirements-dev.txt  rustfmt.toml
.cargo/: config.toml
.claude/: claude.md
.github/: dependabot.yml
.github/actions/pgo-profile/: action.yml
.github/workflows/: ci.yml  docs.yml  jvm-ci.yml  maturin-ci.yml  release.yml  rust-ci.yml
benches/: combination_benchmarks.rs  comprehensive_benchmark.rs  history.csv  isolation_benchmarks.rs  realworld_benchmarks.rs  stress_benchmarks.rs
dev/bench/: data.js
docs/: book.toml
docs/src/: SUMMARY.md  introduction.md
docs/src/getting-started/: installation.md  quickstart-jvm.md  quickstart-python.md  quickstart-rust.md
docs/src/guide/: collision-handling.md  databricks-setup.md  dataframe-support.md  filtering.md  flatten-unflatten.md  normal-mode.md  parallel-processing.md  replacements.md  type-conversion.md
docs/src/reference/: architecture.md  error-codes.md  jvm-api.md  python-api.md  rust-api.md
docs/src/resources/: changelog.md  performance.md  troubleshooting.md
examples/: advance_usage.rs  basic_usage.rs  bench_compare.rs  bench_quick.rs  comprehensive_test.rs  feature_by_feature.rs  feature_combinations.rs  json_flattener_examples.rs  rust_examples.rs  test_lowercase.rs  test_lowercase_performance.rs  test_type_conversion.rs  unified_api.rs
jvm/: README.md  pom.xml
jvm/examples/io/github/amaye15/jsontoolsrs/examples/: FeatureByFeature.java  FeatureCombinations.java
jvm/src/main/java/io/github/amaye15/jsontoolsrs/: JsonTools.java  JsonToolsException.java  JsonToolsHandle.java  JsonToolsNative.java  NativeHandleCache.java  NativeLibraryLoader.java
jvm/src/main/java/io/github/amaye15/jsontoolsrs/spark/: BatchTransform.java  FlattenUDF.java  UnflattenUDF.java
jvm/src/test/java/io/github/amaye15/jsontoolsrs/: JsonToolsNativeTest.java  JsonToolsTest.java
jvm/src/test/java/io/github/amaye15/jsontoolsrs/spark/: BatchTransformTest.java  FlattenUDFSparkTest.java
python/examples/: basic_usage.py  examples.py  feature_by_feature.py  feature_combinations.py  lowercase_demo.py  python_builder_example.py  python_examples.py
python/json_tools_rs/: __init__.py  __init__.pyi  json_tools_rs.pyi
python/tests/: test_flatten_json.py  test_unflattener.py  tests.py
scripts/: pgo_train.py  run_benchmarks.sh
src/: builder.rs  cache.rs  config.rs  convert.rs  error.rs  flatten.rs  fxhash.rs  json_parser.rs  jvm.rs  lib.rs  main.rs  python.rs  tests.rs  transform.rs  types.rs  unflatten.rs
