[package]
name = "json-tools-rs"
version = "0.9.0"
edition = "2021"
description = "A high-performance Rust library for advanced JSON manipulation with SIMD-accelerated parsing, Crossbeam parallelism, and Python bindings with DataFrame/Series support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amaye15/json-tools-rs"
keywords = ["json", "flatten", "manipulation", "simd"]
categories = ["data-structures", "parsing"]
publish = false

[lib]
name = "json_tools_rs"
path = "src/lib.rs"

# Support both library and Python extension
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "json-tools-rs"
path = "src/main.rs"

[dependencies]
regex = "1.11.1"
# JSON parsing: sonic-rs on 64-bit (fastest), simd-json on 32-bit (fallback)
serde = { version = "1.0", features = ["rc"] }  # rc feature needed for Arc<T> serialization
serde_json = "1.0.141"
pyo3 = { version = "0.27.2", features = ["extension-module"], optional = true }
thiserror = "2.0.12"
rustc-hash = "2.0.0"
fast-float2 = "0.2"
crossbeam = "0.8"
memchr = "2.7"  # SIMD-optimized byte searching
smallvec = "1.13"  # Stack-allocated vectors for small buffers
phf = { version = "0.13.1", features = ["macros"] }  # Perfect hash for boolean parsing
pythonize = { version = "0.27.0", optional = true }
chrono = { version = "0.4.42", default-features = false, features = ["std", "clock"] }
dashmap = "6.1.0"
itoa = "1.0"            # Fast integer-to-string conversion (replaces write!/fmt overhead)

[target.'cfg(target_pointer_width = "64")'.dependencies]
# sonic-rs is fastest but only works on 64-bit architectures
sonic-rs = "0.5.6"

[target.'cfg(target_pointer_width = "32")'.dependencies]
# simd-json fallback for 32-bit architectures
simd-json = "0.17.0"

[features]
default = []  # Add python to default features
python = ["pyo3", "dep:pythonize"]

test-assets-performance = []

[dev-dependencies]
criterion = { version = "0.8.1", features = ["html_reports"] }

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[bench]]
name = "isolation_benchmarks"
harness = false

[[bench]]
name = "combination_benchmarks"
harness = false

[[bench]]
name = "realworld_benchmarks"
harness = false

[[bench]]
name = "stress_benchmarks"
harness = false

# ================================================================================================
# Performance Optimization Profiles
# ================================================================================================

[profile.release]
lto = "fat"            # Full LTO for cross-crate inlining (10-15% faster than "thin")
codegen-units = 1      # Better optimization (slower compile, faster runtime)
opt-level = 3          # Maximum optimization
strip = true           # Remove debug symbols for smaller binary
overflow-checks = false # Disable overflow checks in release (1-2% faster)
# Note: panic = "abort" not used due to Python bindings compatibility

[profile.release-lto]
inherits = "release"
lto = "fat"            # Full LTO for maximum performance (production builds)
codegen-units = 1

[profile.profiling]
inherits = "release"
strip = false          # Keep debug symbols for samply/flamegraph
debug = 1              # Line-level debug info without impacting codegen
