[package]
name = "json-tools-rs"
version = "0.9.4"
edition = "2021"
rust-version = "1.80"
description = "A high-performance Rust library for advanced JSON manipulation with SIMD-accelerated parsing, Rayon parallelism, and Python bindings with DataFrame/Series support"
license = "MIT OR Apache-2.0"
repository = "https://github.com/amaye15/json-tools-rs"
keywords = ["json", "flatten", "manipulation", "simd"]
categories = ["data-structures", "parsing"]
readme = "README.md"
# Only Rust-relevant files -- jvm/ (Java/Maven), python/ (Python bindings source),
# docs/ (mdBook source), and tooling config are separate ecosystems/audiences that
# don't belong in the published crate archive every `cargo build` consumer downloads.
exclude = [
    ".claude/",
    ".github/",
    ".pre-commit-config.yaml",
    "docs/",
    "jvm/",
    "python/",
    "scripts/",
    "book.toml",
    "benches/history.csv",
]

[lib]
name = "json_tools_rs"
path = "src/lib.rs"

# Support both library and Python extension
crate-type = ["rlib", "cdylib"]

[[bin]]
name = "json-tools-rs"
path = "src/main.rs"

[dependencies]
regex = "1.12.3"
# JSON parsing: sonic-rs on 64-bit (fastest), simd-json on 32-bit (fallback)
serde = { version = "1.0.228", features = ["rc", "derive"] }  # rc: Arc<T> serialization; derive: jvm feature's JvmConfig
serde_json = "1.0.149"
pyo3 = { version = "0.29.0", features = ["extension-module"], optional = true }
memchr = "2.8.0"  # SIMD-optimized byte searching
smallvec = "1.15.1"  # Stack-allocated vectors for small buffers
# Small-string optimization for JSON object keys (inlines up to 24 bytes, no heap
# allocation). Real-world JSON keys average ~8.6 chars in this project's own benchmark
# corpus (benches/realworld_benchmarks.rs) -- comfortably inline. Validated with an
# isolated benchmark before adopting: ~3.4x faster than String for realistic
# insert+lookup key-map workloads. Pure Rust, MSRV 1.80-compatible, and most of its
# transitive deps (itoa, cfg-if, zmij) are already in this tree via other dependencies.
compact_str = "0.10"
# Arena allocator for flatten's slow path (CollectingWalker, used when key
# lowercasing/replacement/collision-handling is configured). CompactString already
# inlines short keys, but flatten's slow-path keys are full dotted paths (e.g.
# "response.data.attributes.firstName"), which commonly exceed its 24-byte inline cap
# for 3+ level nesting and still heap-allocate one at a time. Validated with an
# isolated benchmark before adopting: ~5.9x faster than CompactString for realistic
# deep-nested-path collection. `collections` feature provides `bumpalo::collections::
# String`, needed for in-place lowercasing/replacement before the final arena commit.
bumpalo = { version = "3.20", features = ["collections"] }
jni = { version = "0.21", optional = true }  # JNI bindings for JVM (Java/Scala/Spark) integration
chrono = { version = "0.4.44", default-features = false, features = ["std", "clock"] }
mimalloc = { version = "0.1.48", default-features = false, optional = true }  # High-performance allocator (~5-10% speedup)
rayon = "1.12.0"  # Persistent work-stealing thread pool: avoids per-call OS thread spawn cost of std::thread::scope
# O(1) lookup + insertion order, for unflatten's object tree (no per-node sort needed).
# Pinned <2.12: indexmap 2.12.0 raised its own rust-version to 1.82, and 2.14.0 requires
# edition2024 (~1.85) -- both above this crate's MSRV of 1.80. 2.11.x's MSRV is 1.63.
indexmap = ">=2.11, <2.12"

[target.'cfg(target_pointer_width = "64")'.dependencies]
# sonic-rs is fastest but only works on 64-bit architectures.
# Pinned to exactly 0.5.7: 0.5.8 uses exposed_provenance/strict_provenance, which
# require a newer rustc than this crate's MSRV of 1.80 (confirmed via a real MSRV CI
# failure) despite being a semver-patch bump upstream.
sonic-rs = "=0.5.7"

[target.'cfg(target_pointer_width = "32")'.dependencies]
# simd-json fallback for 32-bit architectures
simd-json = "0.17.0"

[features]
default = []  # Python bindings are opt-in via --features python
# Python bindings (opt-in). Dict/list/DataFrame <-> JSON conversion goes through
# Python's own stdlib `json` module (via pyo3) rather than a Rust-side serde
# crate -- see python.rs's `py_dumps`/`py_loads` doc comments for why: CPython's
# hand-tuned C `json` module benchmarked faster than a generic serde-based
# PyObject<->Value traversal for the nested/batch data this library's own
# flatten/unflatten operations are meant for.
python = ["pyo3"]
jvm = ["dep:jni"]  # JVM (Java/Scala/Spark) bindings via JNI (opt-in)
mimalloc = ["dep:mimalloc"]  # High-performance allocator (~5-10% speedup)

test-assets-performance = []

[dev-dependencies]
criterion = { version = "0.8.2", features = ["html_reports"] }

[[bench]]
name = "comprehensive_benchmark"
harness = false

[[bench]]
name = "isolation_benchmarks"
harness = false

[[bench]]
name = "combination_benchmarks"
harness = false

[[bench]]
name = "realworld_benchmarks"
harness = false

[[bench]]
name = "stress_benchmarks"
harness = false

# ================================================================================================
# Performance Optimization Profiles
# ================================================================================================

[profile.release]
lto = "fat"            # Full LTO for cross-crate inlining (10-15% faster than "thin")
codegen-units = 1      # Better optimization (slower compile, faster runtime)
opt-level = 3          # Maximum optimization
strip = true           # Remove debug symbols for smaller binary
overflow-checks = false # Disable overflow checks in release (1-2% faster)
# Note: panic = "abort" not used due to Python bindings compatibility

[profile.release-lto]
inherits = "release"
lto = "fat"            # Full LTO for maximum performance (production builds)
codegen-units = 1

[profile.profiling]
inherits = "release"
strip = false          # Keep debug symbols for samply/flamegraph
debug = 1              # Line-level debug info without impacting codegen
