[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "json-tools-rs"
description = "Python bindings for JSON Tools RS - Advanced JSON manipulation library"
readme = "README.md"
license = {text = "MIT OR Apache-2.0"}
authors = [
    {name = "JSON Tools RS Contributors"},
]
keywords = ["json", "flatten", "manipulation", "parsing", "rust"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Rust",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Text Processing :: General",
    "Topic :: Utilities",
]
requires-python = ">=3.8"
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/your-username/json-tools-rs"
Repository = "https://github.com/your-username/json-tools-rs"
Documentation = "https://github.com/your-username/json-tools-rs#readme"
"Bug Tracker" = "https://github.com/your-username/json-tools-rs/issues"

[tool.maturin]
features = ["pyo3/extension-module", "python"]
python-source = "python"
module-name = "json_tools_rs"

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.black]
line-length = 88
target-version = ['py38']

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
